# qt-simple-template

./: .clangd  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.template  CMakePresets-extended.json  CMakePresets.json  CONTRIBUTING.md  LICENSE.template  README.md  README.md.template  TEMPLATE_USAGE.md  conanfile.py  conanfile.txt  template.json  vcpkg.json.template
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci.yml  code-quality.yml  conan-ci.yml  msys2-ci.yml  nightly.yml  packaging.yml  release.yml  stale.yml  template-validation.yml
app/: CMakeLists.txt  Widget.cpp  Widget.ui  config.h.in.template  main.cpp
app/include/controllers/: ApplicationController.h  BaseController.h
app/include/interfaces/: IController.h  IModel.h  IService.h  IView.h
app/include/models/: ApplicationModel.h  BaseModel.h
app/include/services/: ConfigurationService.h
app/include/utils/: Logger.h
app/include/views/: BaseView.h  MainWindow.h
app/src/controllers/: ApplicationController.cpp  BaseController.cpp
app/src/models/: ApplicationModel.cpp  BaseModel.cpp
app/src/services/: ConfigurationService.cpp
app/src/utils/: Logger.cpp
app/src/views/: BaseView.cpp  MainWindow.cpp
cmake/: CompilerSettings.cmake  ConfigSummary.cmake  InstallConfig.cmake  MSYS2Detection.cmake  PackageManagerPriority.cmake  PackagingConfig.cmake  PlatformSettings.cmake  Qt6EntryPointFix.cmake  QtHelpers.cmake
controls/: CMakeLists.txt  Slider.cpp
docs/: BUILD_EXAMPLES.md  CMakeLists.txt  PACKAGE_MANAGER_GUIDE.md  README.md
docs/api/: Doxyfile  README.md
docs/architecture/: mvc-architecture.md
docs/assets/: README.md
docs/developer-guide/: README.md  ci-cd.md  mvc-quick-reference.md  troubleshooting.md
docs/quick-reference/: msys2-presets.md
docs/template-guide/: README.md
docs/troubleshooting/: package-manager-issues.md
docs/user-guide/: README.md  comprehensive-packaging.md  getting-started-extended.md  installation.md  msys2-build-presets.md  package-manager-priority.md  package-managers.md
examples/: README.md
examples/basic-usage/hello-world/: CMakeLists.txt  README.md  main.cpp
examples/custom-widgets/progress-indicator/: ProgressIndicator.h
packaging/arch/: PKGBUILD.in
packaging/chocolatey/: qt-simple-template.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/conda/: meta.yaml.in
packaging/docker/: Dockerfile.in
packaging/flatpak/: com.example.QtSimpleTemplate.json.in
packaging/snap/: snapcraft.yaml.in
packaging/winget/: qt-simple-template.yaml
packaging/wix/: Product.wxs.in
scripts/: build_conan.py  build_msys2.bat  build_msys2.sh  customize_template.bat  customize_template.py  run_tests.bat  run_tests.py  validate_package_managers.sh  validate_packaging.sh  validate_template.py
tests/: CMakeLists.txt  CTestConfig.cmake  README.md
tests/benchmarks/: CMakeLists.txt  benchmark_resource_loading.cpp  benchmark_theme_switching.cpp  benchmark_widget_performance.cpp
tests/integration/: CMakeLists.txt  test_app_integration.cpp  test_build_integration.cpp  test_resource_integration.cpp
tests/unit/: CMakeLists.txt  test_config.cpp  test_i18n.cpp  test_slider.cpp  test_theme.cpp  test_widget.cpp
